--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --exit"
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "mocha": "^4.0.1"
+    "mocha": "^4.1.0"
   },
   "author": ""
 }
